<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProductListActivity">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_3sdp"
        android:paddingBottom="@dimen/_3sdp"
        android:text="@string/name"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/tv_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_3sdp"
        android:paddingBottom="@dimen/_3sdp"
        android:text="@string/description"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/tv_sale_price"
        app:layout_constraintStart_toEndOf="@+id/tv_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sale_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_3sdp"
        android:paddingBottom="@dimen/_3sdp"
        android:text="@string/sale_price"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/tv_regular_price"
        app:layout_constraintStart_toEndOf="@+id/tv_description"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_regular_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_3sdp"
        android:paddingBottom="@dimen/_3sdp"
        android:text="@string/regular_price"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/tv_product_photo"
        app:layout_constraintStart_toEndOf="@+id/tv_sale_price"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_product_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_3sdp"
        android:paddingBottom="@dimen/_3sdp"
        android:text="@string/image"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_regular_price"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>